# gswarm

./: .all-contributorsrc  .env  .env.example  .gitignore  .npmrc  API_ENDPOINTS.md  CHANGELOG.md  CLAUDE.md  README.md  biome.json  biome.jsonc  instrumentation.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
.claude/: settings.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  changelog-bump-consolidated.js  changelog.js  changelog.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude.yml  deploy.yml  reset-dev.yml  restore-env-keys.yml  ~deploy.yml
.husky/: pre-commit
app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  shared.tsx
app/dashboard/: layout.tsx  not-found.tsx  page.tsx
app/readme/: client.tsx  page.tsx
components/providers/: command-palette-provider.tsx  confirmation-provider.tsx  font-provider.tsx  index.ts  notification-provider.tsx  react-grab-provider.tsx  theme-provider.tsx
components/topbar/: index.tsx
components/ui/: accordion.tsx  avatar.tsx  (+43 more)
lib/: admin-session.ts  api-validation.ts  console.ts  env-validator.ts  rate-limit.ts  types.ts  utils.test.ts  utils.ts
python/: pyproject.toml  sync-pyproject.ts  transcribe_youtube.py
python/tests/: test_example.py
python/transcriptions/: yAE3ONleUas.txt
scripts/: launch.sh  launch.ts  migrate-to-redis.ts  populate-token-projects.ts  reactgrab-patch.cjs  reinstall.mjs  run-integration-tests.ts  sync-version.mjs  test-api-keys.ts
(+103 files in other folders)
