[project]
name = "gswarm-api"
version = "1.0.2"
description = "Gemini Swarm API Proxy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*np.object.*:FutureWarning",
]
